
next
----
- added API object "SoundGroup" for creating & playing sound groups
- added sounds:
	- apple_bite
	- bird
	- bounce
	- coins
	- cow_moo
	- explosion
	- fuse
	- gallop
	- horse_neigh
	- horse_snort
	- pencil
	- quail
	- rooster
	- sheep


v1.1
----
- added entity hit sound from default mod


v1.0
----
- initial release
- added node sounds from default mod
- added methods for setting node sounds